# AccelerateMVCC

./: .gitignore  CMakeLists.txt  LICENSE  README.md  accel_ring_test.cpp  correctness_test.cpp  epoch_reclaimer_test.cpp  main.cpp  marked_ptr_test.cpp  stage_c_bench.cpp
Kuku/dotnet/examples/: KukuNetExamples.csproj
Kuku/dotnet/nuget/: KukuNet.nuspec
Kuku/dotnet/src/: KukuNet.csproj
Kuku/dotnet/tests/: KukuNetTests.csproj
docs/: NEXT-SESSION.md  README.md  REPORT.md  design-1c.md  design-D.md  design-D4b-shadow.md  design-D5-gc.md  design-D6-wide-row.md  design-D7-no-wrong-serve.md  design-D8-memory-scope.md  design-gc.md  findings.md  open-items.md  paper-review-todo.md  phase2-q3-llt.md  phase3-tpcc.md  phase3-vdriver.md  progress-log.md
docs/paper/: paper-en.md  paper-ko.md
include/: accelerateMVCC.cpp  accelerateMVCC.h  active_view_registry.h  common.h  epoch_reclaimer.h  epoch_table.h  interval_list.cpp  interval_list.h  marked_ptr.h  read_view_mirror.h  trxManager.h
integration/innodb/: accel_hook.cc  accel_hook.h  accel_ring.h  d1b1_patch.pl  innodb-8.4.10-accel.diff
integration/results/: README.md  q11_d6.csv  q11_van64.csv  q15_concurrent.csv  q17_tpcc_latency.csv  q18_gc_coexist.csv  q3_realistic.csv  q5_gcon.csv  q5_writeonly.csv  q5g_bpcross.csv  q5g_captune.csv
integration/results/vdriver/: README.md  vd_cs_vanchain.err  vd_cs_vanchain.out  vd_cs_vdchain.err  vd_held_van_4G.out  vd_held_van_64M.out  vd_held_vd_4G.out  vd_held_vd_64M.out  vd_matrix_results.txt
integration/scripts/: README.md  build_cov.sh  build_d0a.sh  build_d0b.sh  build_d0c.sh  build_d0d.sh  build_d1a.sh  build_d1b1.sh  build_d1b2a.sh  build_d1b2b.sh  build_d1b3a.sh  build_d1b3b.sh  build_d1b3b2.sh  build_d1b4.sh  build_d2img.sh  build_d4b1.sh  build_d4b3b.sh  build_d4b3c.sh  build_d4c.sh  build_d4c2.sh  build_d4d1.sh  build_d4d2.sh  build_d4d_prep.sh  build_d5_1b.sh  build_d5_1c.sh  build_d5_a2s1.sh  build_d5_a2s2.sh  build_d5_a2s3.sh  build_d5_a2s5.sh  build_d5_alpha.sh  build_d5_c2.sh  build_d5_c3.sh  build_d5_c3c.sh  build_d5_c3c_char.sh  build_d5_c3c_diag.sh  build_d5_d6_gc.sh  build_d5_d6_walk.sh  build_d5_diag.sh  build_d5_diag2.sh  build_d5_diag3.sh  (+34 more)
